<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
<!--     <include layout="@layout/title_bar"/> -->
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@color/white"
	    android:orientation="vertical"
	    android:padding="@dimen/dp_10">"
		<TextView android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:text="@string/device_name"/>
		<EditText android:id="@+id/device_name"
		    android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:textColor="@color/black"/>
		<TextView android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:text="@string/password"/>
		<EditText android:id="@+id/password"
		    android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:textColor="@color/black"/>
		<TextView android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:text="@string/password_confirm"/>
		<EditText android:id="@+id/password_confirm"
		    android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:textColor="@color/black"/>
		<Button android:id="@+id/modify"
		    android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:text="@string/modify_camera_info"
	    	android:background="@drawable/red_btn_selector"
	    	android:layout_marginTop="@dimen/dp_10"
	    	android:textColor="@color/white"
	    	android:textSize="@dimen/dp_18"/>
	</LinearLayout>"
</LinearLayout>
