<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/user_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical" >

        <include layout="@layout/zhongyun_viewer_title_bar" />

        <LinearLayout
            android:id="@+id/add_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/add_cid"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/add_cid"
                android:textColor="@color/black"
                android:textSize="@dimen/dp_16" />

            <TextView
                android:id="@+id/add_cid_by_qr"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/add_cid_by_qr"
                android:textColor="@color/black"
                android:textSize="@dimen/dp_16" />
        </LinearLayout>

        <com.handmark.pulltorefresh.library.PullToRefreshListView
            xmlns:ptr="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cameraList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@drawable/list_divider"
            android:dividerHeight="@dimen/dp_1"
            android:fadingEdge="none"
            ptr:ptrHeaderTextColor="@color/black"
            ptr:ptrMode="pullFromStart" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="@color/white"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/user_bg" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/user_image" />

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dp_16" />
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_12" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/help"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/nav_menu_selector"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_12" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="@string/help"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/dp_16" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/arrow" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/nav_menu_selector"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_12" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="@string/feedback"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/dp_16" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/arrow" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/nav_menu_selector"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_12" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="@string/about"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/dp_16" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/arrow" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/disclaimer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/nav_menu_selector"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_12" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="@string/disclaimer"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/dp_16" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/arrow" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/business"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/nav_menu_selector"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_12" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="@string/business"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/dp_16" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/arrow" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_20"
            android:background="@drawable/red_btn_selector"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_16" />
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>