<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@color/btn_white"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

		<RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/capture_img"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/capture_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/capture_img"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/video_view_controller_capture_btn"
                android:textColor="@color/btn_login"
                android:textSize="14sp"  />
        </RelativeLayout>
        
		<RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/switch_img"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/switch_camera_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/switch_img"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/video_view_controller_camera_switch_btn"
                android:textColor="@color/btn_login"
                android:textSize="14sp"  />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/flash_img"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/flash_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/flash_img"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/video_view_controller_flash_switch_btn"
                android:textColor="@color/btn_login"
                android:textSize="14sp"  />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>