<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:gravity="center" >
<!--     android:background="@color/btn_white" -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/sound_switcher_icon"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/sound_off"/>

            <TextView
                android:id="@+id/sound_switcher_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sound_switcher_icon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/sound_off"
                android:textColor="@color/btn_login"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/record_video_icon"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/record_off" />

            <TextView
                android:id="@+id/record_video_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/record_video_icon"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:text="@string/record"
                android:textColor="@color/btn_login"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/hold_talk"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/hold_talk"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hold_talk"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/hold_talk"
                android:textColor="@color/btn_login"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>